Dreambau-LibreTranslate/config/libretranslate-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: libretranslate-nodeport
  namespace: wcr
  labels:
    app: libretranslate
    component: nodeport
spec:
  type: NodePort
  selector:
    app: libretranslate
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
      # Fixed port so you have a stable ip:port endpoint.
      nodePort: 30500
